fixed bug with backing amount being too long

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1067,7 +1067,7 @@ Centralised Things
         padding: 1em;
     }
     #view-pledges .pledge > strong {
-        width: 80%;
+        width: 70%;
         display: inline-block;
     }
     #view-pledges .pledge button {
